# UrbanAccessApp

./: .gitignore  README.md  pyproject.toml
backend/: analysis_gtfs.py  analysis_parks.py  analysis_schools.py  gtfs_service_quality.py  main.py  utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AnalysisPage.tsx  CityMap.tsx  ErrorBoundary.tsx  GtfsControls.tsx  LandingPage.tsx  ParksControls.tsx  SchoolsControls.tsx  StatsPanel.tsx
tests/: test_api.py  test_utils.py
