[project]
name = "urban-access-app"
version = "0.1.0"
description = "Multi-mode urban accessibility web app (Transit, Schools, Parks)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.2",
    "geopandas>=1.1.2",
    "numpy>=2.0.0",
    "osmnx>=2.1.0",
    "shapely>=2.1.2",
    "uvicorn>=0.41.0",
    "urbanaccessanalyzer[h3,osm,plot]",
    "pyGTFSHandler @ git+https://github.com/CityScope/pyGTFSHandler.git@v1.0.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
urbanaccessanalyzer = { git = "https://github.com/CityScope/UrbanAccessAnalyzer.git", rev = "v1.0.0" }
